--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -3,36 +3,36 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  margin: 0;
-  padding: 2rem;
-  font-family: $font-family-sans-serif;
-  font-size: 16px;
-  line-height: 24px;
   background-color: $uoc-bg;
   color: $uoc-corporate;
+  display: flex;
+  flex-direction: column;
+  font-family: $font-family-sans-serif;
+  font-size: 16px;
+  height: 100vh;
+  line-height: 24px;
+  margin: 0;
+  padding: 2rem;
 }
 
 .uoc-container {
-  max-width: 800px;
-  margin: auto;
-  padding: 2rem;
-  border-radius: 2rem;
-  text-align: center;
   background-color: #fff;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border-radius: 2rem;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 10%),
+    0 2px 4px -1px rgb(0 0 0 / 6%);
+  margin: auto;
+  max-width: 800px;
+  padding: 2rem;
+  text-align: center;
 }
 
 .uoc-logo {
   display: block;
+  height: auto;
+  margin-bottom: 1.5rem;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 1.5rem;
   max-width: 200px;
-  height: auto;
 
   @media (min-width: $mqMinWidth) {
     max-width: none;
@@ -40,10 +40,10 @@ body {
 }
 
 .uoc-title {
+  color: $uoc-corporate;
   font-family: $font-family-serif;
   font-size: 24px;
   font-weight: 700;
-  color: $uoc-corporate;
 
   @media (min-width: $mqMinWidth) {
     font-size: 36px;
@@ -51,7 +51,7 @@ body {
 }
 
 .uoc-footer {
-  margin-top: 1.5rem;
   font-size: 0.75rem;
+  margin-top: 1.5rem;
   text-align: center;
 }
