--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -1,57 +1,80 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background-color: $uoc-bg;
-  color: $uoc-corporate;
+.header {
   display: flex;
-  flex-direction: column;
-  font-family: $font-family-sans-serif;
-  font-size: 16px;
-  height: 100vh;
-  line-height: 24px;
-  margin: 0;
-  padding: 2rem;
-}
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 4rem ;
+  padding-right: 4rem ;
+  padding-top: 1rem ;
+  padding-bottom: 1rem ;
+    .logo img {
 
-.uoc-container {
-  background-color: #fff;
-  border-radius: 2rem;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 10%),
-    0 2px 4px -1px rgb(0 0 0 / 6%);
-  margin: auto;
-  max-width: 800px;
-  padding: 2rem;
+      max-width: 30%;
+      height: auto;     // 👈 Manté la proporció original
+      display: block;   // 👈 Evita espais no desitjats
+    }
+  }
+
+
+
+.footer {
+  background-color: #ffffff;
   text-align: center;
-}
 
-.uoc-logo {
-  display: block;
-  height: auto;
-  margin-bottom: 1.5rem;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 200px;
+  font-size: 0.9rem;
+  color: #333;
+  padding-left: 4rem ;
+  padding-right: 4rem ;
+  padding-top: 1rem ;
+  padding-bottom: 1rem ;
 
-  @media (min-width: $mqMinWidth) {
-    max-width: none;
+  hr {
+    width: 60%;
+    margin: 2rem auto;
+    border: none;
+    border-top: 4px solid #bbdefb;
+  }
+
+  .footer__bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+    padding: 0 2rem;
+    flex-wrap: wrap;
+  }
+
+  .footer__logo img {
+    max-height: 50px;
+  }
+
+  .footer__nav {
+    display: flex;
+    gap: 4rem;
+    justify-content: center;
+    flex: 1;
+  }
+
+  .footer__nav a {
+    color: #1565c0;
+    text-decoration: none;
+    font-weight: bold;
+  }
+
+  .footer__icons {
+    display: flex;
+    gap: 1rem;
+    font-size: 1.5rem;
+  }
+
+  .footer__icons a {
+    color: #1565c0;
+    text-decoration: none;
+    transition: color 0.3s;
+
+    &:hover {
+      color: #64b5f6;
+    }
   }
 }
 
-.uoc-title {
-  color: $uoc-corporate;
-  font-family: $font-family-serif;
-  font-size: 24px;
-  font-weight: 700;
 
-  @media (min-width: $mqMinWidth) {
-    font-size: 36px;
-  }
-}
-
-.uoc-footer {
-  font-size: 0.75rem;
-  margin-top: 1.5rem;
-  text-align: center;
-}
