--- a/src/assets/styles/layouts/_article.scss
+++ b/src/assets/styles/layouts/_article.scss
@@ -23,6 +23,7 @@
     &__content {
       display: flex;
       flex-direction: column;
+      container-type: inline-size;
   
       & > .article__paragraph {
         margin: 1rem 0;
@@ -33,6 +34,10 @@
         height: auto;
         margin: 1.5rem 0;
         border-radius: 0.5rem;
+
+        @container (max-width: 600px) {
+          border-radius: 0.2rem;
+        }
       }
   
       & > .article__blockquote {
