--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 4rem;
+  container-type: inline-size;
 
   &__logo img {
     max-width: 30%;
@@ -18,6 +19,10 @@
       text-decoration: none;
       color: #1565c0;
       font-weight: bold;
+      
+      @container (max-width: 500px) {
+        font-size: 0.9rem;
+      }
     }
   }
 }
@@ -54,11 +59,16 @@
     gap: 4rem;
     justify-content: center;
     flex: 1;
+    container-type: inline-size;
 
     a {
       color: #1565c0;
       text-decoration: none;
       font-weight: bold;
+
+      @container (max-width: 500px) {
+        font-size: 0.8rem;
+      }
     }
   }
 
